[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/scene/strelka.png" type="Texture" id=1]
[ext_resource path="res://mesh/stamp.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Hidden_stamp.gd" type="Script" id=3]

[node name="Hidden_stamp" type="Node2D"]
script = ExtResource( 3 )

[node name="show" type="Node2D" parent="."]
visible = false
scale = Vector2( 10, 10 )

[node name="strelo4ka2" type="Button" parent="show"]
margin_left = -16.1002
margin_top = -10.4
margin_right = 833.9
margin_bottom = 1054.6
rect_rotation = -359.999
rect_scale = Vector2( 0.0198216, 0.0197276 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stamp" parent="show" instance=ExtResource( 2 )]
position = Vector2( -40, 0 )
scale = Vector2( 1, 1 )

[node name="strelo4ka" type="Button" parent="."]
margin_top = 120.0
margin_right = 850.0
margin_bottom = 1185.0
rect_rotation = -180.0
rect_scale = Vector2( 0.24201, 0.223573 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="show/strelo4ka2" to="." method="_on_strelo4ka_pressed"]
[connection signal="pressed" from="show/strelo4ka2" to="." method="_on_strelo4ka2_pressed"]
[connection signal="pressed" from="strelo4ka" to="." method="_on_strelo4ka_pressed"]
